--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
 after_script:
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-report.py builds/build
 - rm -rf builds/build/sources
 - rm -rf builds/build/build.state.yaml
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
     secure: Hx89kPNeeyIVerPM2nJty9yB00uu9x47uRNbkRg7dcZIlXmMY1usmhopzM30r8U5vFV5Yx2RLjhFr9bfkMaItupYHGaXjlIskPGjkI+GdeByvPoJ5N0/9p4pjCs8ZkB7UfNEh7LOpOiSklGdwxqPkt5MId70p1EtC7v0sb/nSW4=
